# elaborato3

./: .gitignore  Activity.cpp  Activity.h  CMakeLists.txt  Register.cpp  Register.h  main.cpp  mainwindow.cpp  mainwindow.h
tests/: tst_activity.cpp  tst_mainwindow.cpp  tst_register.cpp
